# VisualOdometry

./: Extraction.ipynb  MVO.py  README.md  cameracalibration.py  dataset.py  dataset_svo.py  descriptors.py  detector.py  detector_vo.py  duplicates.py  keypoints.py  klt.py  localization.py  main.py  main_svo.py  matcher.py  orb_flann.py  orb_live_extraction.py  parse.py  parser_vo.py  plot.py  preprocess.py  shi_tomasi_extraction.py  sift_extraction.py  surf_extraction.py  svo.py  tracking.py  tracking_svo.py  visual_odometry.py
basics/: README.md
csv/: Extraction.xlsx  Smoothening.xlsx  orb_rotation.xlsx
feature_data/: orb.csv
feature_data/orb/: orbbgr100.csv  orbbgr1500.csv  orbbgr700.csv  (+11 more)
kitti_ground/: akaze.txt  kaze.txt  main.py
pose_files/: akaze.txt  surf.txt
quadx_description/: CMakeLists.txt  LICENSE  README.md  package.xml  readme.md  urdf.rviz
quadx_description/config/: joint_names_quadx.yaml
quadx_description/launch/: demo.launch  display.launch  gazebo.launch  octomap.launch  rtabmap.launch  rviz.launch
quadx_description/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  base_link.STL
quadx_description/src/: control.py  odom.py  odom_gz.py  odom_pub.py  pid.py
quadx_description/sw_model/: BASE_FRAME.SLDPRT  CAMERA.SLDPRT  FINAL_ASS.SLDASM  MOTOR.SLDPRT  MOTOR_ASS.SLDASM  MOTOR_FRAME.SLDPRT  MOTOR_ROT.SLDPRT  PROPS.SLDPRT  TOP_FRAME.SLDPRT
quadx_description/urdf/: materials.xacro  quadx.csv  quadx.xacro  sensors.xacro
quadx_description/worlds/: room.world  stop.world
result/: brisk.txt  kaze.txt  sift.txt
results/: readme.md
(+9 files in other folders)
